MOTECH-1856: DEV - BUG - RAVE Integration - check if the Lookup popup is align with the width of the Visit type

--- a/platform/server-bundle/src/main/resources/webapp/css/index.css
+++ b/platform/server-bundle/src/main/resources/webapp/css/index.css
@@ -489,7 +489,7 @@ h4.panel-title {
 .lookup-dialog.popover {
     max-width: 80%;
     padding: 10px 15px;
-    width: 550px;
+    width: 650px;
 }
 
 .box-content {
